// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stringifyConfig > should stringify Rsbuild config correctly 1`] = `
"{
  tools: {
    webpackChain(chain) {
      chain.devtool("eval");
    }
  }
}"
`;

exports[`stringifyConfig > should stringify webpack config correctly 1`] = `
"{
  mode: 'development',
  plugins: [
    {
      definitions: {
        foo: 'bar'
      }
    }
  ]
}"
`;

exports[`stringifyConfig > should stringify webpack config with verbose option correctly 1`] = `
"{
  mode: 'development',
  plugins: [
    {
      definitions: {
        foo: 'bar',
        baz() {
          const a = 1;
          return a;
        }
      }
    }
  ]
}"
`;
